@@ -1,3 +1,9 @@
+2017-07-24  Even Rouault <even.rouault at spatialys.com>
+
+	* libtiff/tif_getimage.c: gtTileContig() and gtTileSeparate():
+	properly break from loops on error when stoponerr is set, instead
+	of going on iterating on row based loop.
+
 2017-07-18  Even Rouault <even.rouault at spatialys.com>
 
 	* libtiff/tif_luv.c: LogLuvInitState(): avoid excessive memory
